--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,18 @@ services:
         command: go run server.go
         ports:
             - 8080:8080
+        depends_on:
+            - db
+    db:
+        image: mysql:8.0.33
+        restart: always
+        environment:
+            TZ: Asia/Tokyo
+            MYSQL_DATABASE: koto
+            MYSQL_ROOT_PASSWORD: password
+            MYSQL_USER: koto
+            MYSQL_PASSWORD: password
+        volumes:
+            - ./mysql-volume:/var/lib/mysql
+        ports:
+            - 3306:3306
