--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,15 @@
 version: "3.3"
 
 services:
+    web-frontend:
+        build:
+            context: frontend
+            dockerfile: Dockerfile
+        command: node server.js
+        ports:
+            - 3000:3000
+        depends_on:
+            - web-backend
     web-backend:
         build:
             context: backend 
