--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@bufbuild/connect-web": "^0.12.0",
     "@bufbuild/protobuf": "^1.3.0",
     "@openapitools/openapi-generator-cli": "^2.6.0",
+    "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
