--- a/buf/package.json
+++ b/buf/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "@bufbuild/buf": "^1.26.1",
+    "@bufbuild/connect": "^0.12.0",
+    "@bufbuild/protobuf": "^1.3.0",
+    "@bufbuild/protoc-gen-connect-es": "^0.12.0",
     "@bufbuild/protoc-gen-es": "^1.3.0"
   }
 }
