--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "generate-typescript-axios": "openapi-generator-cli generate -g typescript-axios -i ../api.yaml -o ./src/generated --api-package=api --model-package=model --additional-properties=withSeparateModelsAndApi=true"
   },
   "dependencies": {
+    "@bufbuild/connect": "^0.12.0",
+    "@bufbuild/connect-next": "^0.12.0",
+    "@bufbuild/connect-web": "^0.12.0",
+    "@bufbuild/protobuf": "^1.3.0",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
