Taskfile に sqlc を追加

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,16 +17,21 @@ tasks:
       - go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
       - go install github.com/bufbuild/connect-go/cmd/protoc-gen-connect-go@latest
       - go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc@latest
+      - go install github.com/sqlc-dev/sqlc/cmd/sqlc@latest
   init:buf:
     dir: buf
     cmds:
       - yarn
   gen:
-    deps: [gen:buf, gen:apidoc]
+    deps: [gen:buf, gen:sqlc, gen:apidoc]
   gen:buf:
     dir: buf
     cmds:
       - npx buf generate
+  gen:sqlc:
+    dir: backend
+    cmds:
+      - sqlc generate
   gen:apidoc:
     cmds:
       - protoc --doc_out=./doc --doc_opt=html,index.html buf/kotobako/**/*.proto
